--- a/2025.md
+++ b/2025.md
@@ -1,7 +1,7 @@
 | When | Book | Name | Note |
 |------|------|------|------|
-| 1月 | 熟達論 | 為末大 | 趣味の伸び悩みのために購入。ひとつのものを極める過程というのは結構いろんな共通項あるんだろうなと |
-| 2月 | ゾーンの入り方 | 室伏広治 | 同じく趣味のために購入。反復練習よりも毎回ランダムな刺激を加えるみたいなエッセンスは色々通じるところがあるだろうなと思った |
+| 1月 | ゾーンの入り方 | 室伏広治 | 趣味の伸び悩みのために購入。反復練習よりも毎回ランダムな刺激を加えるみたいなエッセンスは色々通じるところがあるだろうなと思った。 |
+| 2月 | 熟達論 | 為末大 | 同じく趣味のために購入。ひとつのものを極める過程というのは結構いろんな共通項ありそうでした。自分の今の状態を俯瞰する感覚を学べた気がします。 |
 | 3月 | RubyでつくるRuby | 遠藤侑介 | プログラミング言語を作ったことがないコンプレックスがあったので購入。簡単な内容でとてもライトにインタープリタの仕組みをハンズオンで学べて大変よかったです。 |
 | 4月 | 最高の体調 | 鈴木祐 | なんか体調が悪かったので、そのヒントになればなと思い購入。だいぶ胡散臭い部分もあったが、自然に触れよう！みたいな部分など言われてみれば意識できていない部分もあってよかった。 |
 | 5月 | 好きなようにしてください | 楠木建 | 後輩のなぜ働くのかという疑問を整理する意味もこめて購入。結果自分のためにも大変勉強になりました。自分がどう思うかよりはどう思われているかということに結構囚われているなと改めて実感。。もう少し自分の心に正直に生きようと思いました。 |
