--- a/2021.md
+++ b/2021.md
@@ -1,5 +1,7 @@
 | When | Book | Author | Note |
 |------|------|------|------|
+| 4月 | NHK 100分 de 名著 カール・マルクス『資本論』 | 斎藤幸平 ||
+| 5月 | 人新世の「資本論」 | 斎藤幸平 ||
 | 9月 | ゼロからよくわかる! Arduinoで電子工作入門ガイド | 登尾徳誠 ||
 | 9月 | Arduinoをはじめよう 第3版 | Massimo Banzi ||
 | 11月 | スターティングGo言語 | 松尾愛賀 ||
