--- a/2018.md
+++ b/2018.md
@@ -1,6 +1,6 @@
 | When | Book | Author | Note |
 |------|------|------|------|
-| 3月 | コミュニケーション技術: 実用的文章の書き方 | 篠田義明 ||
-| 5月 | 勝負論 ウメハラの流儀 | 梅原大吾 ||
-| 7月 | マージンFX: 外国為替証拠金取引 | 尾関高 ||
-| 10月 | 今いるメンバーで「大金星」を挙げるチームの法則――『ジャイアントキリング』の流儀 | 仲山進也 ||
+| 3月 | コミュニケーション技術: 実用的文章の書き方 | 篠田義明 | 文章をわかりやすく書くにはということに悩んで購入したと思います。ただ、真面目な文体で自分には合わなかった記憶 |
+| 5月 | 勝負論 ウメハラの流儀 | 梅原大吾 | youtubeをきっかけにこの頃ウメハラの生き方に憧れてました |
+| 7月 | マージンFX: 外国為替証拠金取引 | 尾関高 | 仕事のために購入。のちに一緒に働くことになるとは思っていなかったです笑 |
+| 10月 | 今いるメンバーで「大金星」を挙げるチームの法則――『ジャイアントキリング』の流儀 | 仲山進也 | 当時のPMから勧められて購入。短期的ですがやる気が出た気がする。チームの4つのフェーズみたいなのは今でもよく覚えています。 |
