--- a/2019.md
+++ b/2019.md
@@ -1,9 +1,9 @@
 | When | Book | Author | Note |
 |------|------|------|------|
-| 3月 | SCRUM BOOT CAMP THE BOOK | 西村直人 ||
-| 3月 | 入門 監視 ―モダンなモニタリングのためのデザインパターン | Mike Julian ||
-| 8月 | 実践ドメイン駆動設計 | Vaughn Vernon ||
-| 8月 | Building Microservices | Sam Newman ||
-| 9月 | Domain-Driven Design Distilled | Vaughn Vernon ||
-| 9月 | Clean Architecture 達人に学ぶソフトウェアの構造と設計 | Robert C.Martin ||
-| 10月 | 令和元年【秋期】応用情報技術者 パーフェクトラーニング過去問題集 | 加藤昭 ||
+| 3月 | SCRUM BOOT CAMP THE BOOK | 西村直人 | 研修でスクラムを教えたいねということで購入。結構感動した記憶。 |
+| 3月 | 入門 監視 ―モダンなモニタリングのためのデザインパターン | Mike Julian | 結構話題になったものの、個人的にはたいして刺さらなかった記憶。 |
+| 8月 | 実践ドメイン駆動設計 | Vaughn Vernon | 仕事のために購入。エンジニア人生を変えるレベルで自分に変革を与えてくれた本です。ただ、日本語訳は微妙。 |
+| 8月 | Building Microservices | Sam Newman | 進化するアーキテクチャーというワードは今でも頭に深く刻まれています。 |
+| 9月 | Domain-Driven Design Distilled | Vaughn Vernon | DDDのエッセンスを短くまとめた本、めっちゃよかった。日本語訳ほしい。 |
+| 9月 | Clean Architecture 達人に学ぶソフトウェアの構造と設計 | Robert C.Martin | 食い入るように読んだ記憶です。たぶん当時は半分くらいしか理解してなかったですが、それでも十分学びになった気がする。 |
+| 10月 | 令和元年【秋期】応用情報技術者 パーフェクトラーニング過去問題集 | 加藤昭 | 転職に役立つかなと思って、応用情報を取得しました。全く役には立たなかった。 |
