--- a/2020.md
+++ b/2020.md
@@ -1,11 +1,11 @@
 | When | Book | Author | Note |
 |------|------|------|------|
-| 1月 | 新版　考える技術・書く技術　問題解決力を伸ばすピラミッド原則 | バーバラ・ミント ||
-| 3月 | 入門 考える技術・書く技術 | 山崎康司 ||
-| 4月 | FIX入門 | 庄子裕明 ||
-| 5月 | 20代にしておきたい17のこと | 本田健 ||
-| 5月 | 嫌われる勇気 自己啓発の源流「アドラー」の教え | 岸見一郎 ||
-| 6月 | 公式 TOEIC Listening & Reading 問題集 6 | Educational Testing Service ||
-| 7月 | テスト駆動開発 | Kent Beck ||
-| 8月 | すぐに使える! 業務で実践できる! Pythonによる AI・機械学習・深層学習アプリのつくり方 | クジラ飛行机 ||
-| 9月 | Webを支える技術 -HTTP、URI、HTML、そしてREST | 山本陽平 ||
+| 1月 | 新版　考える技術・書く技術　問題解決力を伸ばすピラミッド原則 | バーバラ・ミント | 当時、上司への報告のしかたみたいなのに悩んでいて、購入した本です。合理的な文章を書く時の定石みたいなのを学べた気がします。 |
+| 3月 | 入門 考える技術・書く技術 | 山崎康司 | 考える技術・書く技術の翻訳者が出していた本です。やはり、翻訳本よりも日本人の書いた本の方がすっと入ってくるので、読み直してもいいかなと思い購入しました。 |
+| 4月 | FIX入門 | 庄子裕明 | 業務のために購入した本。金融のITに勤めている人にしかわからないきがしますが・・・ |
+| 5月 | 20代にしておきたい17のこと | 本田健 | 当時28歳で、ある程度若手は脱却しはじめた年齢になっていたので、改めて何か考えねばと思い購入した気がします。 |
+| 5月 | 嫌われる勇気 自己啓発の源流「アドラー」の教え | 岸見一郎 | 当時流行っていたので購入しました。なんか気持ちが楽になったような記憶です。 |
+| 6月 | 公式 TOEIC Listening & Reading 問題集 6 | Educational Testing Service | 転職を考えていたので、TOEICの勉強のために購入しました。 |
+| 7月 | テスト駆動開発 | Kent Beck | ちょっとキャリアとしては遅いかもしれませんが、ここでTDDと出会いました。なかなか実践まではできていないのが正直なところ・・・ |
+| 8月 | すぐに使える! 業務で実践できる! Pythonによる AI・機械学習・深層学習アプリのつくり方 | クジラ飛行机 | 機械学習になんとなく可能性を感じていたので、後輩と輪読していました。学習の待ち時間がすごいなぁという記憶です。 |
+| 9月 | Webを支える技術 -HTTP、URI、HTML、そしてREST | 山本陽平 | REST通信のことをほぼほぼ知らなかったので基本になるかなと思い、購入しました。 |
