--- a/2021.md
+++ b/2021.md
@@ -1,8 +1,8 @@
 | When | Book | Author | Note |
 |------|------|------|------|
-| 4月 | NHK 100分 de 名著 カール・マルクス『資本論』 | 斎藤幸平 ||
-| 5月 | 人新世の「資本論」 | 斎藤幸平 ||
-| 9月 | ゼロからよくわかる! Arduinoで電子工作入門ガイド | 登尾徳誠 ||
-| 9月 | Arduinoをはじめよう 第3版 | Massimo Banzi ||
-| 11月 | スターティングGo言語 | 松尾愛賀 ||
-| 12月 | 実践Rustプログラミング入門 | 初田直也 ||
+| 4月 | NHK 100分 de 名著 カール・マルクス『資本論』 | 斎藤幸平 | 前の会社で結構限界まで働いた後、次の会社までのおやすみ期間になんで働くんだろうとかもやもや考えていたので、ちょうど気になっていたマルクスの考えを簡単にしれるかなと思い、読みました。 |
+| 5月 | 人新世の「資本論」 | 斎藤幸平 | 前読んだ本がよかったのでもう少し分厚くて解説されている本を購入しました。結構個人的には刺さった部分がありました。 |
+| 9月 | ゼロからよくわかる! Arduinoで電子工作入門ガイド | 登尾徳誠 | 転職早々、エンジニアに囲まれることで技術への興味がめっちゃ上がりました。電子工作でものづくりしました。 |
+| 9月 | Arduinoをはじめよう 第3版 | Massimo Banzi | 上とセットで購入しました。電子工作、部品を買うところが一番ハードル高い・・・ |
+| 11月 | スターティングGo言語 | 松尾愛賀 | Goを学ぶために購入。個人的にはネットのチュートリアルよりこういう本で学ぶのが向いているみたいです。 |
+| 12月 | 実践Rustプログラミング入門 | 初田直也 | Rustを学ぶために購入。今では大好きな言語に。 |
