--- a/2022.md
+++ b/2022.md
@@ -1,11 +1,11 @@
 | When | Book | Author | Note |
 |------|------|------|------|
-| 2月 | 世界史を変えた植物 | 稲垣栄洋 ||
-| 2月 | 世界一やさしい問題解決の授業―自分で考え、行動する力が身につく | 渡辺健介 ||
-| 3月 | 問題解決のための「アルゴリズム×数学」が基礎からしっかり身につく本 | 米田優峻 ||
-| 4月 | リクルートのDNA 起業家精神とは何か | 江副浩正 ||
-| 6月 | 後悔しないためのSpring Boot 入門書：Spring 解体新書 | 田村達也 ||
-| 6月 | チームトポロジー　価値あるソフトウェアをすばやく届ける適応型組織設計 | マシュー・スケルトン ||
-| 7月 | 仕組みと使い方がわかる Docker&Kubernetesのきほんのきほん | 小笠原種高 ||
-| 8月 | Kotlin サーバーサイドプログラミング実践開発 | 竹端尚人 ||
-| 10月 | 起業の科学 | 田所雅之 ||
+| 2月 | 世界史を変えた植物 | 稲垣栄洋 | 会社の先輩の勧めもあり、読みました。その後読む銃・病原菌・鉄ともちょっと似たような切り口で納得感のある内容でした。 |
+| 2月 | 世界一やさしい問題解決の授業―自分で考え、行動する力が身につく | 渡辺健介 | これも会社の方がおすすめしていたので読みました。いろいろビジネス書読んだことある人ならユニークな内容は少なそうですが、最初の一冊とかにはいいかもしれない。 |
+| 3月 | 問題解決のための「アルゴリズム×数学」が基礎からしっかり身につく本 | 米田優峻 | 競プロ界隈で話題になっていたので購入。内容は入門の入門というイメージ。水色こえていればあんまり学びはないかも。 |
+| 4月 | リクルートのDNA 起業家精神とは何か | 江副浩正 | 会社の創業者の本も読んでみるかと思い購入。今も残る制度についても言及されてはいたが、どんどん合理的になって利益というか売り上げを追求しているなぁという感覚にはなった。 |
+| 6月 | 後悔しないためのSpring Boot 入門書：Spring 解体新書 | 田村達也 | 育休中のリスキリングとして購入。ここでようやくSpringBootの基礎を学ぶ(遅) |
+| 6月 | チームトポロジー　価値あるソフトウェアをすばやく届ける適応型組織設計 | マシュー・スケルトン | これも当時話題になっていたので購入。2025年現在もここででてくる言葉は前提知識として語られることも多いので、チームリーダーをするなら必読書くらいの扱いだと思います。 |
+| 7月 | 仕組みと使い方がわかる Docker&Kubernetesのきほんのきほん | 小笠原種高 | DockerよくわからんコンプレックスとK8s触ったことないコンプレックスを克服するために購入。DockerFileはいまだによくわからん |
+| 8月 | Kotlin サーバーサイドプログラミング実践開発 | 竹端尚人 | Kotlinを初学したので購入。Java触ったことあるととっつきやすい気はします。色々基礎を学べてよかったです。 |
+| 10月 | 起業の科学 | 田所雅之 | これも必読書かなと思い、購入しました。が、起業するつもりがないなら特に読まなくてもいいかなという感想です。 |
