--- a/2023.md
+++ b/2023.md
@@ -1,9 +1,9 @@
 | When | Book | Author | Note |
 |------|------|------|------|
-| 3月 | Effective Java 第3版 | Joshua Bloch ||
-| 6月 | 小さく分けて考える　「悩む時間」と「無駄な頑張り」を80％減らす分解思考 | 菅原健一 ||
-| 6月 | 一番伝わる説明の順番 | 田中耕比古 ||
-| 7月 | マスタリングTCP/IP―入門編―(第6版) | 井上直也 ||
-| 10月 | 銃・病原菌・鉄 | ジャレド・ダイアモンド ||
-| 12月 | なぜ、あなたの仕事は終わらないのか スピードは最強の武器である | 中島聡 ||
-| 12月 | もうすぐ死に逝く私から いまを生きる君たちへ：夜回り先生 いのちの講演 | 水谷修 |  |
+| 3月 | Effective Java 第3版 | Joshua Bloch | 会社の研修のために購入。内容は難しいというか分かりにくいですが、個人的には結構好きな1冊です。学びはめちゃくちゃ多かった。 |
+| 6月 | 小さく分けて考える　「悩む時間」と「無駄な頑張り」を80％減らす分解思考 | 菅原健一 | 最近ビジネス書読んでないなと思い、購入。基本的に知っている内容を言葉を変えてインプットできて再認識できたなぁという内容でした。 |
+| 6月 | 一番伝わる説明の順番 | 田中耕比古 | これも、新たな学びがあったというよりは再認識できた感じです。 |
+| 7月 | マスタリングTCP/IP―入門編―(第6版) | 井上直也 | ネットワーク系の仕事をやった時に全然用語が分からず購入。1冊で大満足のボリューム、たぶん半分くらいしか理解してない。 |
+| 10月 | 銃・病原菌・鉄 | ジャレド・ダイアモンド | そろそろ読むかと思い、頑張って読みました。人類の歴史を納得感もって解説しており、大変ためになりました。 |
+| 12月 | なぜ、あなたの仕事は終わらないのか スピードは最強の武器である | 中島聡 | ロケットスタート仕事術という言葉だけ知っていたのですが、今更読みました。実践はめちゃくちゃ難しいですが、意識的にはやめはやめに終わらせようという意識になっています。 |
+| 12月 | もうすぐ死に逝く私から いまを生きる君たちへ：夜回り先生 いのちの講演 | 水谷修 | なんか死の間際に書く本って本当に伝えたいこと書いているんだろうなと思ったのか、なんか悩んでいたのか読みました。いろいろな示唆を得れた気がします。 |
