--- a/2025.md
+++ b/2025.md
@@ -6,3 +6,4 @@
 | 4月 | 最高の体調 | 鈴木祐 | なんか体調が悪かったので、そのヒントになればなと思い購入。だいぶ胡散臭い部分もあったが、自然に触れよう！みたいな部分など言われてみれば意識できていない部分もあってよかった。 |
 | 5月 | 好きなようにしてください | 楠木建 | 後輩のなぜ働くのかという疑問を整理する意味もこめて購入。結果自分のためにも大変勉強になりました。自分がどう思うかよりはどう思われているかということに結構囚われているなと改めて実感。。もう少し自分の心に正直に生きようと思いました。 |
 | 7月 | テクノ封建制 | ヤニス・バルファキス | 資本主義が新しいフェーズに突入していると実感はあったものの、すごくきれいに言語化していて色々腑に落ちました。そこまで本自体は長くはないのですが、やはり和訳の本を読むのはちょっと疲れますね。世の中の流れみたいなのは半分のりつつ、自分の幸せをきちんと考えて追い求めるようにしたいと再度思いました。 |
+| 7月 | 世界秩序が変わるとき | 齋藤ジン | 経済の視点から、今後の世界が変わっていくということを書いており、テクノ封建制と同じくなんとなく感じていたことがさらに実感に変わりました。中国への見方は差異がありましたが、自分はこちらの本の説明の方がしっくりきています。ただ、今後のAI関連の動向次第なような気もしております。個人としてはどちらに転んでも受け身をとれるようにしておくのが大事なのかなという気がしました。 |
