--- a/2025.md
+++ b/2025.md
@@ -7,3 +7,4 @@
 | 5月 | 好きなようにしてください | 楠木建 | 後輩のなぜ働くのかという疑問を整理する意味もこめて購入。結果自分のためにも大変勉強になりました。自分がどう思うかよりはどう思われているかということに結構囚われているなと改めて実感。。もう少し自分の心に正直に生きようと思いました。 |
 | 7月 | テクノ封建制 | ヤニス・バルファキス | 資本主義が新しいフェーズに突入していると実感はあったものの、すごくきれいに言語化していて色々腑に落ちました。そこまで本自体は長くはないのですが、やはり和訳の本を読むのはちょっと疲れますね。世の中の流れみたいなのは半分のりつつ、自分の幸せをきちんと考えて追い求めるようにしたいと再度思いました。 |
 | 7月 | 世界秩序が変わるとき | 齋藤ジン | 経済の視点から、今後の世界が変わっていくということを書いており、テクノ封建制と同じくなんとなく感じていたことがさらに実感に変わりました。中国への見方は差異がありましたが、自分はこちらの本の説明の方がしっくりきています。ただ、今後のAI関連の動向次第なような気もしております。個人としてはどちらに転んでも受け身をとれるようにしておくのが大事なのかなという気がしました。 |
+| 8月 | 現場で役立つシステム設計の原則 | 増田亨 | オブジェクト指向の考え方を実際の具体例を添えながら説明されていて、大変わかりやすかったです。原理原則では理解していたものの、具体例で示されることでさらに腑に落ちて実践にうつせる気がしました。また、文章の随所随所にわかる〜という話が散りばめられていて大変共感できました。名著です！ |
