--- a/2025.md
+++ b/2025.md
@@ -10,3 +10,5 @@
 | 8月 | 現場で役立つシステム設計の原則 | 増田亨 | オブジェクト指向の考え方を実際の具体例を添えながら説明されていて、大変わかりやすかったです。原理原則では理解していたものの、具体例で示されることでさらに腑に落ちて実践にうつせる気がしました。また、文章の随所随所にわかる〜という話が散りばめられていて大変共感できました。名著です！ |
 | 8月 | これからはじめるReact実践入門 | 山田祥寛 | Reactの基本が書かれていて大変勉強になりました。欲を言えばサンプルはjsではなく全部tsだと嬉しかったなぁと思いました。理解するにあたっても型情報はあると個人的には理解が促進されます。分量多かったのでjsで写経していましたが、後半は一部tsで写経していました。時間かかるけど、そっちの方が勉強になったかもと後から思いました。 |
 | 8月 | 言葉にできるは武器になる | 梅田悟司 | 後輩の働く意義などを言語化するときにどういうアプローチがとれるのかのヒントになればと思い、購入しました。実際に思ったことを整理するというプロセスは大事だと思っていたので、そこを再認識できたところはよかったしいろいろとヒントになるエッセンスは散りばめられて大変勉強になりました。 |
+| 9月 | 世界の一流は「休日」に何をしているのか | 堀川慎司 | こうやると人生豊かになりそうだよなぁというのが詰め合わせられていました。一方、お金ないとそんなことできんだろ！というのが混じっていたりと、一般的に実践できるものできないものはある気がしました |
+| 10月 | 科学的に証明されたすごい習慣大百科 | 堀田秀吾 | 前回に続き、こうすると人生豊かになるかもというヒントが色々詰まっていました。サンプル数が少なくて本当か？みたいなものも結構ありましたが、自分に向いているものを選んで実践するのはよさそう |
