--- a/2025.md
+++ b/2025.md
@@ -12,3 +12,5 @@
 | 8月 | 言葉にできるは武器になる | 梅田悟司 | 後輩の働く意義などを言語化するときにどういうアプローチがとれるのかのヒントになればと思い、購入しました。実際に思ったことを整理するというプロセスは大事だと思っていたので、そこを再認識できたところはよかったしいろいろとヒントになるエッセンスは散りばめられて大変勉強になりました。 |
 | 9月 | 世界の一流は「休日」に何をしているのか | 堀川慎司 | こうやると人生豊かになりそうだよなぁというのが詰め合わせられていました。一方、お金ないとそんなことできんだろ！というのが混じっていたりと、一般的に実践できるものできないものはある気がしました |
 | 10月 | 科学的に証明されたすごい習慣大百科 | 堀田秀吾 | 前回に続き、こうすると人生豊かになるかもというヒントが色々詰まっていました。サンプル数が少なくて本当か？みたいなものも結構ありましたが、自分に向いているものを選んで実践するのはよさそう |
+| 10月 | 美しく、強く、成長する国へ。 | 高市早苗 | ちょうど総裁選があったので、読んでみました。結構政策の細かい話までのっていて、政治家のみなさまも色々考えてるんだなぁと感心させられました。 |
+| 11月 | 移動する人はうまくいく | 長倉顕太 | 端々にマウントをとってるだろみたいな言い回しはうざったい一方、移動が大事という点においては伝わってきて確かになと思った。どこか行く時のフットワークは確実に軽くなりました。 |
