--- a/2025.md
+++ b/2025.md
@@ -15,3 +15,4 @@
 | 10月 | 美しく、強く、成長する国へ。 | 高市早苗 | ちょうど総裁選があったので、読んでみました。結構政策の細かい話までのっていて、政治家のみなさまも色々考えてるんだなぁと感心させられました。 |
 | 11月 | 移動する人はうまくいく | 長倉顕太 | 端々にマウントをとってるだろみたいな言い回しはうざったい一方、移動が大事という点においては伝わってきて確かになと思った。どこか行く時のフットワークは確実に軽くなりました。 |
 | 11月 | 仕事は初速が9割 | 堀川慎司 | 以前読んだロケットスタート仕事術などに似ているが、また違う言葉で腑に落ちて理解できてとてもよかった。明日から少しずつ取り組んでいきたいと思いました。忘れた頃にまた読みたい本です。 |
+| 11月 | いきなりプログラミング Androidアプリ開発 | Sara | 何も知らない状態からなんとなくの概要は把握できて実際にエミュレータや実機でアプリを動かすところまで学べました。詳しい部分の説明は寂しい印象もありますが、全部説明しているとキリも無い気がするのでとっかかりとしては非常にいい一冊だったかなと思います。 |
