Add December entry

--- a/2025.md
+++ b/2025.md
@@ -16,3 +16,4 @@
 | 11月 | 移動する人はうまくいく | 長倉顕太 | 端々にマウントをとってるだろみたいな言い回しはうざったい一方、移動が大事という点においては伝わってきて確かになと思った。どこか行く時のフットワークは確実に軽くなりました。 |
 | 11月 | 仕事は初速が9割 | 堀川慎司 | 以前読んだロケットスタート仕事術などに似ているが、また違う言葉で腑に落ちて理解できてとてもよかった。明日から少しずつ取り組んでいきたいと思いました。忘れた頃にまた読みたい本です。 |
 | 11月 | いきなりプログラミング Androidアプリ開発 | Sara | 何も知らない状態からなんとなくの概要は把握できて実際にエミュレータや実機でアプリを動かすところまで学べました。詳しい部分の説明は寂しい印象もありますが、全部説明しているとキリも無い気がするのでとっかかりとしては非常にいい一冊だったかなと思います。 |
+| 12月 | 客観より主観 | 内田和成 | AIが台頭してきた中、個人の介在価値をどう発揮するかということに対して捉え方が個人的に読むことではっきりした気がします。ただ、自分の主観だけではなく他者の主観についても意識することが大事だというのも納得できる内容で、いろんな人が読んでも学びが得られそうな本だなと思いました。 |
